# clickable

./: .gitignore  .pyup.yml  .travis.yml  CHANGELOG.md  CONTRIBUTING.rst  HISTORY.rst  MANIFEST.in  Makefile  Pipfile  README.md  README.rst  deploy.sh  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini  travis_pypi_setup.py
.github/: ISSUE_TEMPLATE.md
bootstrap/: LICENSE  pyproject.toml
bootstrap/clickable_bootstrap/: __init__.py  bootstrap.py
bootstrap/tests/: clickable.py  test_configuration.py
clickable/: __init__.py
clickable/bootstrap/: __init__.py
clickable/click/: __init__.py
clickable/sphinx/: __init__.py
clickable/syncing/: __init__.py
clickable/utils/: __init__.py
clickable/virtualenv/: virtualenv.py
coloredlogs/: __init__.py
docs/: .gitignore  index.rst
logging/: clickable_logging.py  pyproject.toml
logging/tests/: test_bootstrap.py
process/: clickable_process.py  pyproject.toml
sphinx/: __init__.py
src/clickable/: __init__.py
syncing/: __init__.py
tests/: test_click.py  test_clickable.py
util/: pyproject.toml
utils/: __init__.py
virtualenv/: __init__.py  virtualenv.py
