[build-system]
requires = ["hatchling", "hatch-semver"]
build-backend = "hatchling.build"

[project]
name = "clickable"
dynamic = ["version"]
description = "Helper scripts to write click applications development's environment"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.6"
authors = [
  { name = "Laurent Almeras", email = "lalmeras@gmail.com" },
]
keywords = [
    "clickable",
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12"
]
dependencies = [
  "blessings==1.7",
  "click==8.0.1",
  "coloredlogs==15.0.1",
  "PyYAML==6.0.1",
]

[project.scripts]
clickable = "clickable.click:main"

[project.urls]
Homepage = "https://github.com/lalmeras/clickable"

[tool.hatch.version]
path = "src/clickable/__init__.py"
scheme = "semver"

[tool.hatch.envs.dev]
dependencies = [
  "bump2version",
  "ipdb",
  "tox",
  "mock",
  "pytest",
  "pytest-cov",
  "mypy",
  "twine",
  "pylint",
  "rope",
  "black >= 20.8b1",
  "pur",
  "sphinx",
  "wheel",
  "pypiserver"
]

[tool.hatch.envs.test]
type = "container"
dependencies = [
  "pytest",
  "pytest-cov"
]

[[tool.hatch.envs.test.matrix]]
python = ["3.8", "3.12"]

[tool.pytest.ini_options]
minversion = "7.1"
addopts = "--cov-config .coveragerc --cov-report=xml --cov=."
testpaths = [
  "tests"
]
