[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "clickable_process"
author = "Laurent Almeras"
author-email = "lalmeras@gmail.com"
home-page = "https://github.com/lalmeras/clickable"
classifiers = ["License :: OSI Approved :: MIT License"]
requires = ["blessings == 1.6.1", "six == 1.10.0", "clickable_logging == 0.9.0"]
dev-requires = ["IPython", "pytest"]
